// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Embeddings Page - Initial Render Tests Error State should match snapshot for error state 1`] = `
<div
  class="ant-flex css-dev-only-do-not-override-1vjf2v5 ant-flex-align-center ant-flex-justify-center ant-flex-vertical"
>
  <span
    class="ant-typography css-dev-only-do-not-override-1vjf2v5"
  >
    <div
      style="text-align: center;"
    >
      <p>
        Failed to load models
      </p>
      <p
        style="font-size: 0.9em; color: rgb(102, 102, 102); margin-top: 8px;"
      >
        Internal Server Error
      </p>
    </div>
  </span>
  <span
    aria-label="close-circle"
    class="anticon anticon-close-circle colorRed icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="close-circle"
      fill="currentColor"
      fill-rule="evenodd"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm0 76c-205.4 0-372 166.6-372 372s166.6 372 372 372 372-166.6 372-372-166.6-372-372-372zm128.01 198.83c.03 0 .05.01.09.06l45.02 45.01a.2.2 0 01.05.09.12.12 0 010 .07c0 .02-.01.04-.05.08L557.25 512l127.87 127.86a.27.27 0 01.05.06v.02a.12.12 0 010 .07c0 .03-.01.05-.05.09l-45.02 45.02a.2.2 0 01-.09.05.12.12 0 01-.07 0c-.02 0-.04-.01-.08-.05L512 557.25 384.14 685.12c-.04.04-.06.05-.08.05a.12.12 0 01-.07 0c-.03 0-.05-.01-.09-.05l-45.02-45.02a.2.2 0 01-.05-.09.12.12 0 010-.07c0-.02.01-.04.06-.08L466.75 512 338.88 384.14a.27.27 0 01-.05-.06l-.01-.02a.12.12 0 010-.07c0-.03.01-.05.05-.09l45.02-45.02a.2.2 0 01.09-.05.12.12 0 01.07 0c.02 0 .04.01.08.06L512 466.75l127.86-127.86c.04-.05.06-.06.08-.06a.12.12 0 01.07 0z"
      />
    </svg>
  </span>
</div>
`;

exports[`Embeddings Page - Initial Render Tests Loading State should match snapshot for loading state 1`] = `
<main
  class="ant-layout-content pageContainer css-dev-only-do-not-override-1vjf2v5"
>
  <div
    class="pageContent"
  >
    <div
      class="ant-flex css-dev-only-do-not-override-1vjf2v5 ant-flex-align-center ant-flex-justify-center ant-flex-vertical"
    >
      <span
        class="ant-typography css-dev-only-do-not-override-1vjf2v5"
        data-testid="loading-message"
      >
        Loading models...
      </span>
      <span
        aria-label="loading"
        class="anticon anticon-loading anticon-spin pageLoader"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="loading"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </span>
    </div>
  </div>
</main>
`;

exports[`Embeddings Page - Initial Render Tests Success State should match snapshot for successful embeddings page render 1`] = `
<main
  class="ant-layout-content pageContainer css-dev-only-do-not-override-1vjf2v5"
>
  <div
    class="pageTitleContainer ant-flex css-dev-only-do-not-override-1vjf2v5 ant-flex-wrap-wrap ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
  >
    <span
      class="ant-typography css-dev-only-do-not-override-1vjf2v5"
      data-testid="heading"
      style="font-weight: 600; font-size: 16px;"
    >
      Embeddings
    </span>
  </div>
  <div
    class="pageContent"
  >
    <div
      class="ant-flex css-dev-only-do-not-override-1vjf2v5 ant-flex-align-stretch ant-flex-vertical"
      style="gap: 24px;"
    >
      <form
        class="ant-form ant-form-vertical css-dev-only-do-not-override-1vjf2v5"
      >
        <div
          class="ant-row css-dev-only-do-not-override-1vjf2v5"
          style="margin-left: -8px; margin-right: -8px;"
        >
          <div
            class="ant-col ant-col-12 css-dev-only-do-not-override-1vjf2v5"
            style="padding-left: 8px; padding-right: 8px;"
          >
            <div
              class="ant-form-item css-dev-only-do-not-override-1vjf2v5"
              style="flex: 1;"
            >
              <div
                class="ant-row ant-form-item-row css-dev-only-do-not-override-1vjf2v5"
              >
                <div
                  class="ant-col ant-form-item-label css-dev-only-do-not-override-1vjf2v5"
                >
                  <label
                    class="ant-form-item-required"
                    for="model"
                    title="Model"
                  >
                    Model
                  </label>
                </div>
                <div
                  class="ant-col ant-form-item-control css-dev-only-do-not-override-1vjf2v5"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <select>
                        <option
                          value="llama3.2:1b"
                        >
                          llama3.2:1b
                        </option>
                        <option
                          value="llama3.2:3b"
                        >
                          llama3.2:3b
                        </option>
                        <option
                          value="mistral:7b"
                        >
                          mistral:7b
                        </option>
                        <option
                          value="codellama:13b"
                        >
                          codellama:13b
                        </option>
                      </select>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-col ant-col-12 css-dev-only-do-not-override-1vjf2v5"
            style="padding-left: 8px; padding-right: 8px;"
          >
            <div
              class="ant-form-item css-dev-only-do-not-override-1vjf2v5"
              style="flex: 1;"
            >
              <div
                class="ant-row ant-form-item-row css-dev-only-do-not-override-1vjf2v5"
              >
                <div
                  class="ant-col ant-form-item-label css-dev-only-do-not-override-1vjf2v5"
                >
                  <label
                    class="ant-form-item-required"
                    for="requestFormat"
                    title="Request Format"
                  >
                    Request Format
                  </label>
                </div>
                <div
                  class="ant-col ant-form-item-control css-dev-only-do-not-override-1vjf2v5"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <select>
                        <option
                          value="ollama"
                        >
                          OLLAMA
                        </option>
                        <option
                          value="openai"
                        >
                          OPENAI
                        </option>
                      </select>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row css-dev-only-do-not-override-1vjf2v5"
          style="margin-left: -8px; margin-right: -8px;"
        >
          <div
            class="ant-col ant-col-12 css-dev-only-do-not-override-1vjf2v5"
            style="padding-left: 8px; padding-right: 8px;"
          >
            <div
              class="ant-form-item css-dev-only-do-not-override-1vjf2v5"
              style="flex: 1;"
            >
              <div
                class="ant-row ant-form-item-row css-dev-only-do-not-override-1vjf2v5"
              >
                <div
                  class="ant-col ant-form-item-label css-dev-only-do-not-override-1vjf2v5"
                >
                  <label
                    class="ant-form-item-required"
                    for="input"
                    title="Input"
                  >
                    Input
                  </label>
                </div>
                <div
                  class="ant-col ant-form-item-control css-dev-only-do-not-override-1vjf2v5"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <select />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item mt-sm css-dev-only-do-not-override-1vjf2v5"
        >
          <div
            class="ant-row ant-form-item-row css-dev-only-do-not-override-1vjf2v5"
          >
            <div
              class="ant-col ant-form-item-control css-dev-only-do-not-override-1vjf2v5"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    class="ant-flex css-dev-only-do-not-override-1vjf2v5"
                    style="gap: 12px;"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-1vjf2v5 ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
                      type="submit"
                    >
                      <span>
                        Generate Embeddings
                      </span>
                    </button>
                    <button
                      class="ant-btn css-dev-only-do-not-override-1vjf2v5 ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                      type="button"
                    >
                      <span>
                        Clear Results
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <span
          class="ant-typography ant-typography-secondary css-dev-only-do-not-override-1vjf2v5"
        >
          Note: You can enter multiple inputs separated by enter key.
        </span>
      </form>
    </div>
  </div>
</main>
`;
